--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,7 +7,7 @@
 body
 {   font-family: 'Raleway', Arial, sans-serif;
   margin: 0;
-  background-image: url(..//pruebas/images/bgtile.png);
+  background-image: url(..//images/bgtile.png);
   background-repeat: repeat-x;
 }
 
