--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   margin-bottom: 40px;
   padding: 0;
+  
 }
 .webPage{
   display: inline;
@@ -28,8 +29,7 @@ body {
 #darkBlue{
   background: #1c5380;
   background-size: 100%;
-  padding-top: 0%;
-  height: 250px;
+  height: 230px;
   float: center;
   position: fixed absolute;
   z-index: -1;
@@ -37,8 +37,9 @@ body {
 
 .header{
 float:right;
-padding-top: 80px;
-padding-right: 130px;
+padding-top: 4%;
+padding-right: 7%;
+image-resolution: 100%
 }
 
 .house{
@@ -77,6 +78,12 @@ padding-right: 130px;
   bottom: 15%
 }
 
+.right{
+  position: absolute;
+  margin: 10% 0 0 33%;
+  bottom: 11%
+}
+
 .whiteGradient{
   background: url('../images/frame.png') no-repeat;
   background-size: 800px;
@@ -105,20 +112,26 @@ h2{
   text-align: left;
 }
 
+.bottons{
+  image-resolution: 100%;
+  image-rendering: auto;
+  padding-left: 7%;
+  position: relative center;
+}
+
+.clear-fix{
+  clear:both;
+}
+
 footer{
-background-color: white;
-display: inline-block;
-list-style: none;
-text-align: justify;
-position: relative fixed bottom;
-margin: 5px;
-padding-left: 13%;
-padding-bottom: o;
-border: 0;
-bottom: 0;
-height: 40px;
-justify-content: space-evenly;
-width: 60%;
+  background-color: white;
+  display: inline-block;
+  list-style: none;
+  text-align: justify;
+  margin: 2px;
+  padding-left: 13%;
+  width: 60%;
+  padding-top:26%;
 }
 
 footer ul li{
@@ -139,20 +152,15 @@ footer ul li a{
   font-weight: bold;
   display: inline-block;
   text-decoration: none;
-  margin: 0;
-  padding: 0;
-  border: 0;
 }
 
 #copy{
   color:grey;
-  vertical-align: baseline;
-  border: 0;
-  padding: 0;
   margin: 0 auto;
   text-transform: uppercase;
   width: 100%;
   font-weight: 600;
   font-size: 12px;
+  display: inline-block
 }
 
