--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,124 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  width: 1400px;
+  height: 1025px;
+}
+
+.instagram-logo {
+  position: absolute;
+  width: 385px;
+  height: 85;
+  top: 145px;
+  left: 605px;
+}
+
+.home {
+  position: absolute;
+  width: 40px;
+  height: 35px;
+  top: 170px;
+  left: 1040px;
+}
+
+.line {
+  position: static;
+  width: 1440px;
+  height: 400px;
+  top: 145px;
+  left: 605px;
+}
+
+.frame {
+  position: absolute;
+  width: 615px;
+  height: 420px;
+  top: 245px;
+  left: 610px;
+}
+
+.phones {
+  position: absolute;
+  width: 385px;
+  height: 635px;
+  top: 122px;
+  left: 90px;
+}
+
+.google-play  {
+  position: absolute;
+  width: 250px;
+  height: 70;
+  top: 685px;
+  left: 960px;
+}
+
+.app-store {
+  position: absolute;
+  width: 250px;
+  height: 70;
+  top: 685px;
+  left: 645px;
+}
+
+.principal-content p {
+  color: rgb(79, 79, 79);
+  position: relative;
+  width: 545px;
+  height: 210px;
+  left: 645px;
+  top: 5px;
+}
+
+.button {
+  color: rgb(229, 229, 229);
+  background-color: #1c5380;
+  position: absolute;
+  width: 90px;
+  height: 40px;
+  top: 170px;
+  left: 1110px;
+}
+
+.capture-share {
+  position: absolute;
+  color: rgb(6, 54, 95);
+  width: 450px;
+  height: 90px;
+  top: 300px;
+  left: 645px;
+}
+
+footer {
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold; 
+  position: absolute;
+  width: 1090px;
+  height: 95px;
+  left: 251px;
+  top: 876px;
+}
+
+footer li {
+  padding: 0 10px;
+  display: inline;
+  float: left;
+}
+
+.copy {
+  color: rgb(135, 134, 134);
+  position: relative;
+  top: 0px;
+  left: 100px;
 }
