--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,81 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+/*body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
 }
+* {margin:0;
+  padding:0;
+
+}
+header {
+  width: 
+  height : 100vw;
+  background:8vw;
+  dark blue: #06365f;
+
+}
+li{
+display:inline;
+  margin-left:;
+  color:;}*/
+  body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 8% 10%;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+h1 {
+  color: #06365f;
+}
+
+.flex {
+  display: flex;
+}
+
+header {
+  align-items: center;
+  justify-content: space-around;
+  padding-bottom: 40%;
+}
+
+.insta {
+  margin-right: 20px;
+}
+
+
+.main {
+  justify-content: space-around;
+}
+
+.left-side {
+  width: 30%;
+}
+
+.right-side {
+  width: 50%;
+}
+div. img {
+  display:block;
+  position:relative;
+  width:300px;
+}
+
+
+
+footer {
+  width: 90%;
+ 
+}
+footer #id {
+  color: grey;
+}
+
+footer li {
+  
+  color:#1c5380;
+}
+
+
