--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,113 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+
+header {
+  background-image: url('../images/bgtile.png');
+  background-size: cover;
+  padding: 200px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+p {
+  line-height: 1.5;
+}
+
+.margin-left-10 {
+  margin-left: 10%;
+}
+
+.box-header {
+  position: relative;
+}
+
+.column-right {
+  background-color: red;
+  padding: 200px;
+}
+
+section {
+  position: absolute;
+  top: 100px;
+}
+
+
+img {
+  display: inline-block;
+}
+
+
+.logo-ig {
+  width: 60%;
+}
+
+button {
+  width: 20%;
+  padding: 5px;
+  margin-left: 10px;
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0%, #1c5380 100%);
+  color: white;
+  border: 1px solid #06365f;
+  position: absolute;
+  right: 0;
+  top: 10px;
+}
+
+.button-text {
+  width: 80%;
+  font-weight: bold;
+}
+
+.column-40 {
+  width: 40%;
+  display: inline-block;
+}
+
+.box {
+  background-color: white;
+  padding: 30px;
+  box-shadow: 0px -2px 2px 1px #0000001a;
+  border-radius: 30px;
+
+}
+
+.download-img {
+  text-align: center;
+  margin: 15px 0;
+
+}
+
+footer {
+  width: 100%;
+  margin: 0 25%;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+}
+
+ul>li {
+  display: inline-block;
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: 400;
+}
+
+.brand {
+  color: rgba(128, 128, 128, 0.377);
 }
