--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,56 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+  
+}
+header {
+  background-image: url(../images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 50px;
+
+}
+header button {
+  width: 70px;
+  font-size: 15px;
+  float: right;
+}
+header img{
+  float: right;
+}
+.phone {
+  float: left;
+  width: 30%;
+}
+.cuerpo {
+  display: inline-block;
+}
+.text{
+  widows: 30px;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  float: right;
+  width: 65%;
+
+}
+.cuerpo img{
+  width: 30%;
+}
+h2 {
+  color: rgb(0, 119, 255);
+  
+}
+p {
+  text-align: justify;
+
+}
+ul{
+  text-align: center;
+
+}
+li {
+  display: inline;
+  text-transform: uppercase;
+  color: rgb(0, 119, 255);
 }
