--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,77 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+header {
+  background-image: url("../images/bgtile.png");
+  background-size: cover;
+  padding: 180px 0;
+}
+
+.principal {
+  width: 85%;
+  margin: 0 18%;
+  position: relative;
+  margin-top: -200px;
+}
+
+.login {
+  display: inline-block;
+  position: absolute;
+  left: 60%;
+  top: 2%;
+  background-color: lightblue;
+  padding: 10px;
+  border-radius: 8%;
+  color: white;
+}
+.col {
+  display: inline-block;
+  width: 40%;
+  
+}
+
+.col-2 {
+  display: inline-block;
+  position: absolute;
+  top: 5%;
+  left: 35%;
+}
+
+.text-container {
+  padding: 15px 15px 0 20px;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+}
+
+h2 {
+  color: darkblue;
+}
+
+.button-container {
+  margin-left: 30px;
+}
+
+.button {
+  margin: 40px 20px;
+}
+
+footer {
+  margin-left: 25%;
+  margin-top: 1%;
+}
+footer a{
+  display: inline-block;
+  width: 8%;
+  text-decoration: none;
+  
 }
