--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,62 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+.phone {
+  margin-top: 100px;
+  margin-left: 100px;
+}
+
+.top {
+  display: inline-block;
+}
+
+.button{
+  background-color:darkblue;
+  margin-left: 40px;
+
+  padding: 10px;
+
+}
+
+.content {
+  display: inline-block;
+  width: 40%;
+  height: 50%;
+  margin-left: 90px;
+}
+
+section{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 20px 60px;
+  border-radius: 20px;
+}
+
+h1{
+  color:darkblue;
+}
+ul li{
+  display: inline-block;
+  color: lightblue;
+  font-weight:bold;
+}
+
+a {
+  text-decoration:none;
+  color:darkblue;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+footer {
+  text-align: center;
+}
+
