--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,72 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-header {
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 200px;
+  position: relative;
+} 
+
+.img-phones {
+  width: 30%;
+  display: inline-block;
+  padding-left: 70px;
+  text-align: center;
+  /*position: absolute;
+  top: 70px;*/
+}
+
+.img-insta {
+  width: 25%;
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 10px;
+  /*position: absolute;
+  top: 70px;*/
+}
+
+button {
+  color: white;
+  background: #1c5380;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.frame-text {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: inline-block;
+  color: #06365f;
+  padding-left: 50px;
+}
+
+.nav-bar {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.nav-bar-li {
+  display: inline-block;
+  padding: 0 10px;
+}
+.nav-bar-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+}
+.column {
+width: 40%;
+display: inline-block;
+/*position: absolute;
+top: 70px;*/
+}
+.app-download {
+  text-align: center;
+}
+.app-download a {
+  margin: 10px;
+}
