--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,116 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.container-h1 {
+  width: 250px;
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+.col {
+  display: inline-block;
+}
+
+.derecha {
+  width: 500px;
+  margin-left: 50px;
+}
+
+.telefono {
+  margin-top: 100px;
+  position: relative; 
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 30px 30px 0 40px;
+  position: relative;
+}
+
+.content p {
+  margin: 15px 0;
+}
+
+.bloque {
+  width: 70%;
+  margin: 0 auto;
+}
+
+footer {
+  width: 70%;
+  margin: 70px 0 70px 300px;
+}
+
+footer ul {
+  display: inline-block;
+  width: 50%;
+}
+
+footer ul li {
+  display: inline-block;
+  font-size: 0.8em;
+  list-style-type: none;
+  text-align: center;
+  width: 11%;
+  color: #1c5380;
+  font-weight: 600;
+}
+
+small {
+  display: inline-block;
+  font-weight: 600;
+  color: rgb(165, 164, 164);
+}
+
+.container-anchors {
+  margin-top: 50px;
+  
+}
+
+.cabecera {
+  position: relative;
+  
+}
+
+.cabecera a {
+  border: 1px solid #06365f;
+  text-decoration: none;
+  color: white;
+  padding: 5px 6px;
+  font-weight: 600;
+  font-size: 0.8em;
+  background-color: #5496cc;
+  position: absolute;
+  left: 80%;
+  top: 30%;
+}
+
+.cabecera img {
+  vertical-align: middle;
+}
+
+.login {
+  width: 20px;  
+  margin-right: 6px;
+}
+
+header {
+  position: absolute;
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 300px;
 }
