--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,5 +7,5 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: blue;
+  background-color: lavender;
 }
