--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,9 +14,15 @@ body {
 
 main{
   display: flex;
+}
+
+main , footer{
   width: 800px;
   margin:  0 auto;
+}
 
+main {
+  padding-top: 120px;
 }
 
 .panFotoPrincipal {
@@ -36,5 +42,18 @@ ul.linksFooter li {
   display: inline-block;
   padding: 2px 5px;
   text-transform: uppercase;
+  font-size: 14px; font-weight: bold;
   color: blue ; /* TODO pickcolor*/
+}
+
+.panContenedorFlex {
+  display: flex;
+
+}
+
+.panHistoria{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 30px;
+
 }
