--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,51 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header{
+  width: 100%;
+  height: 280px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat; /* Do not repeat the image */
+  background-size: auto;
+  background-position: 0,0;
+}
+
+main{
+  /* position: relative; */
+}
+
+.capture{
+  width: 540px;
+  height: 500px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: contain;
+  background-position: auto, 0;
+  padding: 20px;
+  position: absolute;
+  top: 140px;
+  left: 50%;
+  margin: 0 auto;
+}
+
+.image{
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 140px;
+  right: 55%;
+}
+
+.title{
+  color: white;
+
+}
+
+.about{
+  display: inline-block;
+}
+
+.clearfix{
+  clear:both;
+}
