--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,7 +43,7 @@ ul.linksFooter li {
   padding: 2px 5px;
   text-transform: uppercase;
   font-size: 14px; font-weight: bold;
-  color: blue ; /* TODO pickcolor*/
+  color: #194164 ;
 }
 
 .panContenedorFlex {
@@ -55,5 +55,13 @@ ul.linksFooter li {
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   padding: 30px;
-
 }
+
+.panHistoria h2{ color:#194164 ;
+  padding-right: 30px}
+
+
+#separadorImagesLink{
+  width: 30px;
+}
+
